Mon Apr 15 22:21:42 2013  Tanaka Akira  <akr@fsij.org>

	* ext/fiddle/depend: New file.

Mon Apr 15 22:01:02 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el (ruby-electric-insert): Check
	  ruby-electric-is-last-command-char-expandable-punct-p here.

	* misc/ruby-electric.el (ruby-electric-closing-char): New
	  interactive function bound to closing characters.  Typing one of
	  those closing characters right after the matching counterpart
	  cancels the effect of automatic closing.  For example, typing
	  "{" followed by "}" simply makes "{}" instead of "{ } }".

Mon Apr 15 12:54:42 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* ext/openssl/ossl_ssl.c: Correct shutdown behavior w.r.t GC.

	* test/openssl/test_ssl.rb: Add tests to verify correct behavior.

	[Bug #8240] Patch provided by Shugo Maeda. Thanks!

Mon Apr 15 10:23:39 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/coverage/depend: fix id.h place as r40283.

	* ext/coverage/extconf.rb: add topdir and topsrcdir to VPATH.

Sun Apr 14 19:46:14 2013  Tanaka Akira  <akr@fsij.org>

	* ext/-test-/debug/depend: New file.

	* ext/-test-/exception/depend: Ditto.

	* ext/-test-/printf/depend: Ditto.

	* ext/-test-/string/depend: Ditto.

	* ext/coverage/depend: Ditto.

	* ext/io/console/depend: Ditto.

	* ext/io/nonblock/depend: Ditto.

	* ext/io/wait/depend: Ditto.

	* ext/openssl/depend: Ditto.

	* ext/pathname/depend: Ditto.

	* ext/psych/depend: Ditto.

	* ext/zlib/depend: Ditto.

Sun Apr 14 02:46:50 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#create_makefile): remove {$(VPATH)} other
	  than nmake.

	* ext/ripper/depend: use VPATH expecting removed by above.

Sat Apr 13 23:06:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (timestamp_file): gather timestamp files in one
	  directory from each extension directories.

Sat Apr 13 21:09:02 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#create_makefile): output new macro